[package]
name = "generate_password"
version = "0.1.4"
edition = "2021"
description = "Use this package to generate password or any 'random' strings with length you want. (Joke, just testing the cargo)"
license = "MIT"
repository = "https://github.com/JEuler/password_generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = "3.2.25"
